--- a/GuestHouseBackOffice.Frontend.Remix/package.json
+++ b/GuestHouseBackOffice.Frontend.Remix/package.json
@@ -11,6 +11,7 @@
     "typecheck": "tsc"
   },
   "dependencies": {
+    "@radix-ui/react-label": "^2.1.6",
     "@radix-ui/react-slot": "^1.2.2",
     "@remix-run/node": "^2.16.6",
     "@remix-run/react": "^2.16.6",
