--- a/GuestHouseBackOffice.Frontend.Remix/package.json
+++ b/GuestHouseBackOffice.Frontend.Remix/package.json
@@ -11,19 +11,12 @@
     "typecheck": "tsc"
   },
   "dependencies": {
-    "@radix-ui/react-label": "^2.1.6",
-    "@radix-ui/react-slot": "^1.2.2",
     "@remix-run/node": "^2.16.6",
     "@remix-run/react": "^2.16.6",
     "@remix-run/serve": "^2.16.6",
-    "class-variance-authority": "^0.7.1",
-    "clsx": "^2.1.1",
     "isbot": "^4.1.0",
-    "lucide-react": "^0.511.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "tailwind-merge": "^3.3.0",
-    "tailwindcss-animate": "^1.0.7"
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@remix-run/dev": "^2.16.6",
@@ -32,6 +25,7 @@
     "@typescript-eslint/eslint-plugin": "^6.7.4",
     "@typescript-eslint/parser": "^6.7.4",
     "autoprefixer": "^10.4.19",
+    "daisyui": "^5.0.35",
     "eslint": "^8.38.0",
     "eslint-import-resolver-typescript": "^3.6.1",
     "eslint-plugin-import": "^2.28.1",
